--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
         "node": "~0.6.11"
     },
     "dependencies": {
+        "requirejs": "latest",
         "express": "3.1.0"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "grunt": "0.4.x",
+        "grunt-exec": "0.4.x",
+        "grunt-cli": "0.1.x"
+    },
     "optionalDependencies": {}
 }
