add grunt config file.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "grunt-exec": "0.4.x",
         "grunt-cli": "0.1.x"
     },
-    "optionalDependencies": {}
+    "optionalDependencies": {},
+    "scripts": {
+        "grunt": "node_modules/.bin/grunt"
+    }
 }
