--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "devDependencies": {
         "grunt": "0.4.x",
         "grunt-exec": "0.4.x",
-        "grunt-cli": "0.1.x"
+        "grunt-cli": "0.1.x",
+        "grunt-shell": "0.2.x"
     },
     "optionalDependencies": {},
     "scripts": {
