--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "grunt-cli": "0.1.x",
         "grunt-shell": "0.2.x",
         "grunt-contrib-connect": "~0.1.2",
-        "grunt-contrib-handlebars": "~0.5.8"
+        "grunt-contrib-handlebars": "~0.5.8",
+        "grunt-contrib-uglify": "latest"
     },
     "optionalDependencies": {},
     "scripts": {
