--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "grunt-shell": "0.2.x",
         "grunt-contrib-connect": "~0.1.2",
         "grunt-contrib-handlebars": "~0.5.8",
-        "grunt-contrib-uglify": "latest"
+        "grunt-contrib-uglify": "latest",
+        "grunt-regarde": "latest",
+        "grunt-contrib-livereload": "latest"
     },
     "optionalDependencies": {},
     "scripts": {
