--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "requirejs": "latest",
+        "bower": "latest",
         "express": "3.1.0"
     },
     "devDependencies": {
