add grunt compass plugin.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "grunt-contrib-handlebars": "~0.5.8",
         "grunt-contrib-uglify": "latest",
         "grunt-regarde": "latest",
-        "grunt-contrib-livereload": "latest"
+        "grunt-contrib-livereload": "latest",
+        "grunt-contrib-compass": "latest"
     },
     "optionalDependencies": {},
     "scripts": {
