--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .sass-cache
-assets/vendor/*
-assets/js/main-built.js
-assets/js/main-built.js.map
-assets/js/main-built.js.src
-assets/templates/template.js
+app/assets/vendor
+app/assets/js/main-built.js
+app/assets/js/main-built.js.map
+app/assets/js/main-built.js.src
+app/assets/templates/template.js
 output/
 node_modules/
