--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ app/assets/js/main-built.js
 app/assets/js/main-built.js.map
 app/assets/js/main-built.js.src
 app/assets/templates/template.js
+app/assets/tmp/
 output/
 node_modules/
