--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "grunt-contrib-copy": "latest",
         "grunt-text-replace": "latest",
         "grunt-contrib-clean": "latest",
-        "grunt-contrib-htmlmin": "latest"
+        "grunt-contrib-htmlmin": "latest",
+        "grunt-requirejs": "latest"
     },
     "optionalDependencies": {},
     "scripts": {
