--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "grunt-text-replace": "latest",
         "grunt-contrib-clean": "latest",
         "grunt-contrib-htmlmin": "latest",
-        "grunt-requirejs": "latest"
+        "grunt-requirejs": "latest",
+        "grunt-bower-task": "latest"
     },
     "optionalDependencies": {},
     "scripts": {
