--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-requirejs": "~0.3.5",
     "grunt-bower-task": "~0.2.2",
-    "mocha": "~1.9.0"
+    "mocha": "~1.9.0",
+    "grunt-contrib-cssmin": "~0.6.0"
   },
   "optionalDependencies": {},
   "scripts": {
