--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "express": "~3.2.1"
   },
   "devDependencies": {
-    "grunt-cli": "~0.1.8",
+    "grunt-cli": "~0.1.9",
     "grunt-shell": "~0.2.2",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-handlebars": "~0.5.8",
+    "grunt-contrib-handlebars": "~0.5.9",
     "grunt-regarde": "~0.1.1",
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-compass": "~0.2.0",
@@ -29,9 +29,14 @@
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-requirejs": "~0.3.5",
-    "grunt-bower-task": "~0.2.2",
+    "grunt-bower-task": "~0.2.3",
     "mocha": "~1.9.0",
-    "grunt-contrib-cssmin": "~0.6.0"
+    "grunt-contrib-cssmin": "~0.6.1",
+    "requirejs": "~2.1.6",
+    "handlebars": "~1.0.12",
+    "express": "~3.2.6",
+    "grunt": "~0.4.1",
+    "bower": "~0.9.2"
   },
   "optionalDependencies": {},
   "scripts": {
