--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "handlebars": "~1.0.12",
     "express": "~3.2.6",
     "grunt": "~0.4.1",
-    "bower": "~0.9.2"
+    "bower": "~0.9.2",
+    "grunt-coffeelint": "0.0.7"
   },
   "optionalDependencies": {},
   "scripts": {
