--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "components"
+    "components",
+    "bower_components",
+    "test",
+    "tests"
   ]
 }
