--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: node_js
 node_js:
     - '0.8'
     - '0.10'
+before_install:
+    - gem update --system
+    - gem install compass
 before_script: grunt release
