--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "grunt-coffeelint": "0.0.8",
     "phantomjs": "~1.9.2-6",
     "grunt-mocha-phantomjs": "~0.3.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-html-validation": "~0.1.12"
   },
   "optionalDependencies": {},
   "scripts": {
