--- a/.editorconfig
+++ b/.editorconfig
@@ -2,27 +2,16 @@
 # EditorConfig helps developers define and maintain consistent
 # coding styles between different editors and IDEs
 
-root = true  ; top-most EditorConfig file
+root = true
 
 [*]
-
 # Change these settings to your own preference
 indent_style = space
-indent_size = 4
-
-[Makefile]
-indent_style = tab
-
-[app/assets/**.js]
-indent_style = space
 indent_size = 2
-
-[app/assets/**.css]
-indent_style = space
-indent_size = 2
-
-# We recommend you to keep these unchanged
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[Makefile]
+indent_style = tab
