remove Gruntfile.js, rename coffeescript to coffee and add npm start command
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "optionalDependencies": {},
   "scripts": {
-    "grunt": "node_modules/.bin/grunt",
+    "start": "grunt",
     "test": "mocha --reporter spec"
   },
   "engines": {
