--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "dependencies": {
     "handlebars": "~1.3.0",
-    "jquery": "~2.0.3",
-    "jquery-migrate": "~1.2.1",
-    "normalize-scss": "~2.1.3",
+    "jquery": "~2.1.0",
+    "normalize-scss": "~3.0.1",
     "backbone-amd": "~1.1.0",
-    "modernizr": "~2.7.1",
-    "requirejs": "~2.1.9",
-    "underscore-amd": "~1.5.2"
+    "modernizr": "~2.7.2",
+    "requirejs": "~2.1.11",
+    "underscore-amd": "~1.5.2",
+    "require-handlebars-plugin": "~0.8.0"
   },
   "ignore": [
     "**/.*",
