--- a/package.json
+++ b/package.json
@@ -9,17 +9,10 @@
     "url": "git://github.com/appleboy/backbone-template-engine.git"
   },
   "main": "build/server.js",
-  "dependencies": {
-    "requirejs": "~2.1.8",
-    "bower": "~0.9.2",
-    "handlebars": "~1.0.12",
-    "express": "~3.2.6"
-  },
   "devDependencies": {
     "grunt-cli": "~0.1.11",
     "grunt-shell": "~0.6.1",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-handlebars": "~0.6.0",
     "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-copy": "~0.4.1",
@@ -30,11 +23,11 @@
     "grunt-bower-task": "~0.3.4",
     "mocha": "~1.16.1",
     "grunt-contrib-cssmin": "~0.7.0",
-    "requirejs": "~2.1.9",
-    "handlebars": "~1.0.12",
-    "express": "~3.2.6",
-    "grunt": "~0.4.2",
-    "bower": "~0.9.2",
+    "requirejs": "^2.1.11",
+    "handlebars": "^2.0.0-alpha.2",
+    "express": "^4.0.0",
+    "grunt": "^0.4.4",
+    "bower": "^1.3.2",
     "grunt-coffeelint": "0.0.10",
     "phantomjs": "~1.9.2-6",
     "grunt-mocha-phantomjs": "~0.3.2",
