--- a/package.json
+++ b/package.json
@@ -33,11 +33,25 @@
     "grunt-mocha-phantomjs": "~0.3.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-html-validation": "~0.1.12",
-    "uuid": "^1.4.1"
+    "uuid": "^1.4.1",
+    "gulp-changed": "~0.3.0",
+    "gulp-coffee": "~1.4.1",
+    "gulp-w3cjs": "~0.1.2",
+    "gulp-clean": "~0.2.4",
+    "gulp": "~3.6.0",
+    "gulp-size": "~0.3.0",
+    "gulp-coffeelint": "~0.3.2",
+    "gulp-compass": "~1.1.8",
+    "gulp-cache": "~0.1.3",
+    "gulp-connect": "~2.0.5",
+    "gulp-jshint": "~1.5.3",
+    "gulp-imagemin": "~0.2.0",
+    "coffee-script": "~1.7.1"
   },
   "optionalDependencies": {},
   "scripts": {
-    "start": "grunt",
+    "start": "gulp",
+    "build": "grunt release",
     "test": "mocha --reporter spec"
   },
   "engines": {
