--- a/package.json
+++ b/package.json
@@ -52,13 +52,14 @@
     "gulp-uglify": "~0.2.1",
     "gulp-minify-css": "~0.3.1",
     "gulp-htmlmin": "~0.1.2",
-    "gulp-replace": "~0.2.0"
+    "gulp-replace": "~0.2.0",
+    "gulp-mocha": "~0.4.1"
   },
   "optionalDependencies": {},
   "scripts": {
     "start": "gulp",
-    "build": "grunt release",
-    "test": "grunt release && mocha --reporter spec"
+    "build": "gulp release",
+    "test": "gulp release --env production && gulp test"
   },
   "engines": {
     "node": ">= 0.8.0"
