--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp release",
-    "test": "gulp release --env production && gulp test"
+    "test": "bower install && gulp release --env production && gulp test"
   },
   "engines": {
     "node": ">= 0.8.0"
