--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "gulp-minify-css": "~0.3.1",
     "gulp-htmlmin": "~0.1.2",
     "gulp-replace": "~0.2.0",
-    "gulp-mocha": "~0.4.1"
+    "gulp-mocha": "~0.4.1",
+    "run-sequence": "~0.3.6"
   },
   "optionalDependencies": {},
   "scripts": {
