--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: node_js
+
 node_js:
   - '0.10'
+
+branches:
+  except:
+    - gh-pages
 
 before_install:
   - gem update --system
   - gem install compass
+
+after_success: build/after_success.sh
