--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-requirejs": "~0.4.0",
     "grunt-bower-task": "~0.3.4",
-    "mocha": "~1.16.1",
+    "mocha": "^1.18.2",
     "grunt-contrib-cssmin": "~0.7.0",
     "requirejs": "~2.1.11",
     "handlebars": "^2.0.0-alpha.2",
-    "express": "^4.0.0",
+    "express": "^4.1.1",
     "grunt": "^0.4.4",
-    "bower": "^1.3.2",
+    "bower": "^1.3.3",
     "grunt-coffeelint": "0.0.10",
-    "phantomjs": "~1.9.2-6",
+    "phantomjs": "^1.9.7-5",
     "grunt-mocha-phantomjs": "~0.3.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-html-validation": "~0.1.12",
     "uuid": "^1.4.1",
     "gulp-changed": "^0.3.0",
-    "gulp-coffee": "^1.4.1",
-    "gulp-w3cjs": "^0.1.2",
+    "gulp-coffee": "^1.4.2",
+    "gulp-w3cjs": "^0.2.0",
     "gulp-clean": "^0.2.4",
     "gulp": "^3.6.2",
     "gulp-size": "^0.3.0",
@@ -46,7 +46,7 @@
     "gulp-connect": "^2.0.5",
     "gulp-imagemin": "^0.5.0",
     "coffee-script": "^1.7.1",
-    "gulp-if": "0.0.5",
+    "gulp-if": "^1.1.0",
     "gulp-util": "~2.2.14",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~0.2.1",
