--- a/package.json
+++ b/package.json
@@ -10,52 +10,52 @@
   },
   "main": "build/server.js",
   "devDependencies": {
-    "grunt-cli": "~0.1.11",
-    "grunt-shell": "~0.6.1",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-compass": "~0.7.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-text-replace": "~0.3.10",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-requirejs": "~0.4.0",
-    "grunt-bower-task": "~0.3.4",
-    "mocha": "^1.18.2",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "requirejs": "~2.1.11",
-    "handlebars": "^2.0.0-alpha.2",
+    "bower": "^1.3.3",
+    "coffee-script": "^1.7.1",
     "express": "^4.1.1",
     "grunt": "^0.4.4",
-    "bower": "^1.3.3",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-cli": "~0.1.11",
     "grunt-coffeelint": "0.0.10",
-    "phantomjs": "^1.9.7-5",
-    "grunt-mocha-phantomjs": "~0.3.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-compass": "~0.7.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-html-validation": "~0.1.12",
-    "uuid": "^1.4.1",
-    "gulp-changed": "^0.3.0",
-    "gulp-coffee": "^1.4.2",
-    "gulp-w3cjs": "^0.2.0",
-    "gulp-clean": "^0.2.4",
+    "grunt-mocha-phantomjs": "~0.3.2",
+    "grunt-requirejs": "~0.4.0",
+    "grunt-shell": "~0.6.1",
+    "grunt-text-replace": "~0.3.10",
     "gulp": "^3.7.0",
-    "gulp-size": "^0.3.0",
+    "gulp-cache": "^0.1.3",
+    "gulp-changed": "^0.3.0",
+    "gulp-clean": "^0.2.4",
+    "gulp-coffee": "^1.4.2",
     "gulp-coffeelint": "^0.3.2",
     "gulp-compass": "^1.1.8",
-    "gulp-cache": "^0.1.3",
     "gulp-connect": "^2.0.5",
-    "gulp-imagemin": "^0.5.0",
-    "coffee-script": "^1.7.1",
-    "gulp-if": "^1.1.0",
-    "gulp-util": "~2.2.14",
-    "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~0.2.1",
-    "gulp-minify-css": "~0.3.1",
     "gulp-htmlmin": "~0.1.2",
-    "gulp-replace": "~0.2.0",
+    "gulp-if": "^1.1.0",
+    "gulp-imagemin": "^0.5.0",
+    "gulp-load-plugins": "^0.5.1",
+    "gulp-minify-css": "~0.3.1",
     "gulp-mocha": "~0.4.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-replace": "~0.2.0",
+    "gulp-size": "^0.3.0",
+    "gulp-uglify": "~0.2.1",
+    "gulp-util": "~2.2.14",
+    "gulp-w3cjs": "^0.2.0",
+    "handlebars": "^2.0.0-alpha.2",
+    "mocha": "^1.18.2",
+    "phantomjs": "^1.9.7-5",
+    "requirejs": "~2.1.11",
     "run-sequence": "~0.3.6",
-    "gulp-load-plugins": "^0.5.1"
+    "uuid": "^1.4.1"
   },
   "optionalDependencies": {},
   "scripts": {
