--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-util": "~2.2.14",
     "gulp-w3cjs": "^0.2.0",
     "handlebars": "^2.0.0-alpha.2",
+    "lazypipe": "^0.2.1",
     "mocha": "^1.18.2",
     "phantomjs": "^1.9.7-5",
     "requirejs": "~2.1.11",
