--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "dependencies": {
     "handlebars": "~1.3.0",
-    "jquery": "~2.1.0",
+    "jquery": "~2.1.1",
     "normalize-scss": "~3.0.1",
-    "backbone-amd": "~1.1.0",
-    "modernizr": "~2.7.2",
-    "requirejs": "~2.1.11",
+    "modernizr": "~2.8.2",
+    "requirejs": "~2.1.14",
     "underscore-amd": "~1.5.2",
-    "require-handlebars-plugin": "~0.8.0"
+    "require-handlebars-plugin": "~0.8.1",
+    "backbone": "~1.1.2",
+    "underscore": "~1.6.0"
   },
   "ignore": [
     "**/.*",
