--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "coffee-script": "^1.7.1",
+    "del": "^0.1.0",
     "express": "^4.1.1",
     "grunt": "^0.4.4",
     "grunt-bower-task": "~0.3.4",
@@ -30,10 +31,9 @@
     "grunt-requirejs": "~0.4.0",
     "grunt-shell": "~0.6.1",
     "grunt-text-replace": "~0.3.10",
-    "gulp": "^3.7.0",
+    "gulp": "^3.8.2",
     "gulp-cache": "^0.1.3",
     "gulp-changed": "^0.3.0",
-    "gulp-clean": "^0.2.4",
     "gulp-coffee": "^1.4.2",
     "gulp-coffeelint": "^0.3.2",
     "gulp-compass": "^1.1.8",
