--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.5",
+    "browser-sync": "^1.1.2",
     "coffee-script": "^1.7.1",
     "del": "^0.1.0",
     "gulp": "^3.8.2",
