--- a/package.json
+++ b/package.json
@@ -9,27 +9,26 @@
     "url": "git://github.com/appleboy/backbone-template-engine.git"
   },
   "devDependencies": {
-    "bower": "^1.3.5",
     "browser-sync": "^1.1.2",
     "coffee-script": "^1.7.1",
     "del": "^0.1.0",
-    "gulp": "^3.8.2",
+    "gulp": "^3.8.6",
     "gulp-cache": "^0.2.0",
     "gulp-changed": "^0.4.0",
-    "gulp-coffee": "^2.0.1",
+    "gulp-coffee": "^2.1.0",
     "gulp-coffeelint": "^0.3.2",
     "gulp-compass": "^1.1.8",
     "gulp-htmlmin": "^0.1.3",
-    "gulp-if": "^1.1.0",
+    "gulp-if": "^1.2.2",
     "gulp-imagemin": "^0.6.1",
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-css": "^0.3.6",
-    "gulp-mocha": "~0.4.1",
+    "gulp-mocha": "^0.5.1",
     "gulp-rename": "~1.2.0",
-    "gulp-replace": "^0.3.0",
+    "gulp-replace": "^0.4.0",
     "gulp-size": "^0.4.0",
     "gulp-uglify": "^0.3.1",
-    "gulp-util": "^2.2.19",
+    "gulp-util": "^2.2.20",
     "lazypipe": "^0.2.1",
     "mocha": "^1.18.2",
     "requirejs": "~2.1.11",
@@ -40,7 +39,6 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp release",
-    "grunt": "grunt release && mocha --reporter spec",
     "test": "bower install && gulp release --env production && gulp test"
   },
   "engines": {
