--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git://github.com/appleboy/backbone-template-engine.git"
   },
   "devDependencies": {
-    "browser-sync": "^1.1.2",
+    "browser-sync": "^1.2.1",
     "coffee-script": "^1.7.1",
     "del": "^0.1.0",
     "gulp": "^3.8.6",
@@ -21,6 +21,7 @@
     "gulp-htmlmin": "^0.1.3",
     "gulp-if": "^1.2.2",
     "gulp-imagemin": "^0.6.1",
+    "gulp-jshint": "^1.7.1",
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-css": "^0.3.6",
     "gulp-mocha": "^0.5.1",
