--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "git://github.com/appleboy/backbone-template-engine.git"
   },
   "devDependencies": {
+    "bower": "^1.3.8",
     "browser-sync": "^1.2.1",
     "coffee-script": "^1.7.1",
     "del": "^0.1.0",
