--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "url": "git://github.com/appleboy/backbone-template-engine.git"
   },
   "devDependencies": {
-    "bower": "^1.3.8",
-    "browser-sync": "^1.3.5",
+    "bower": "^1.3.9",
+    "browser-sync": "^1.3.6",
     "coffee-script": "^1.7.1",
     "del": "^0.1.2",
     "gulp": "^3.8.7",
     "gulp-cache": "^0.2.1",
     "gulp-changed": "^1.0.0",
-    "gulp-coffee": "^2.1.1",
-    "gulp-coffeelint": "^0.3.2",
-    "gulp-compass": "^1.2.0",
+    "gulp-coffee": "^2.1.2",
+    "gulp-coffeelint": "^0.3.4",
+    "gulp-compass": "^1.3.1",
     "gulp-csso": "^0.2.9",
     "gulp-if": "^1.2.4",
-    "gulp-imagemin": "^1.0.0",
+    "gulp-imagemin": "^1.0.1",
     "gulp-jshint": "^1.8.4",
-    "gulp-load-plugins": "^0.5.3",
+    "gulp-load-plugins": "^0.6.0",
     "gulp-minify-html": "^0.1.4",
     "gulp-mocha": "^1.0.0",
     "gulp-rename": "~1.2.0",
     "gulp-replace": "^0.4.0",
     "gulp-size": "^1.0.0",
-    "gulp-uglify": "^0.3.1",
+    "gulp-uglify": "^0.3.2",
     "gulp-util": "^3.0.0",
     "lazypipe": "^0.2.2",
     "mocha": "^1.21.4",
     "require-dir": "^0.1.0",
-    "requirejs": "~2.1.11",
+    "requirejs": "^2.1.14",
     "run-sequence": "~0.3.6",
     "uuid": "^1.4.1"
   },
