--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
     "gulp-cache": "^0.2.1",
     "gulp-changed": "^1.0.0",
     "gulp-coffee": "^2.1.2",
-    "gulp-coffeelint": "^0.3.4",
-    "gulp-compass": "^1.3.1",
+    "gulp-coffeelint": "^0.4.0",
+    "gulp-compass": "^2.0.1",
     "gulp-csso": "^0.2.9",
     "gulp-if": "^1.2.4",
     "gulp-imagemin": "^1.0.1",
     "gulp-jshint": "^1.8.4",
-    "gulp-load-plugins": "^0.6.0",
+    "gulp-load-plugins": "^0.7.1",
     "gulp-minify-html": "^0.1.4",
     "gulp-mocha": "^1.0.0",
     "gulp-rename": "~1.2.0",
     "gulp-replace": "^0.4.0",
     "gulp-size": "^1.0.0",
-    "gulp-uglify": "^0.3.2",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.0",
     "lazypipe": "^0.2.2",
-    "mocha": "^1.21.4",
+    "mocha": "^2.0.1",
     "require-dir": "^0.1.0",
     "requirejs": "^2.1.14",
-    "run-sequence": "~0.3.6",
-    "uuid": "^1.4.1"
+    "run-sequence": "^1.0.1",
+    "uuid": "^2.0.1"
   },
   "optionalDependencies": {},
   "scripts": {
